Configured local access via home network

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   transition: transform 500ms ease;
 }
 
-@media (click) {
+@media (hover) {
   .card-content {
     transform: translateY(65%);
     transition: transform 500ms ease;
